syntax = "proto3";

package settings.v1;

import "types/v1/types.proto";

service RecordingRulesService {
  rpc ListRecordingRules(ListRecordingRulesRequest) returns (ListRecordingRulesResponse) {}
}

message RecordingRule2 {
  string id = 1;
  string metric_name = 2;
  string service_name = 3;
  string profile_type = 4;
  repeated string matchers = 5;
  repeated string group_by = 6;
  repeated string external_labels = 7;
  string prometheus_data_source = 8;
  int64 last_updated = 9;
}

message ListRecordingRulesRequest {}

message ListRecordingRulesResponse {
  repeated RecordingRule2 rules = 1;
}

message RecordingRuleSetting {
  repeated RecordingRule2 rules = 1;
}

message RecordingRule {
  // Unique id of the recording rule within the tenant.
  string id = 1;
  string metric_name = 2;
  repeated string matchers = 3;
  repeated string group_by = 4;
  repeated types.v1.LabelPair external_labels = 5;
}
